@@ -97,11 +97,12 @@ $watcher = App::PerlWatcher::Watcher::Weather->new(
         fail    => { 2 => 'info'   },
     },
     engine_config       => $engine_config,
+    callback            => $callback_handler,
 );
 
 ok defined($watcher), "watcher was created";
 
-$watcher->start($callback_handler);
+$watcher->start;
 $end_var->recv;
 
 is $callback_invocations, scalar @$scenario, "correct number of callback invocations";
