@@ -1,4 +1,6 @@
 {{$NEXT}}
+    [API] Watcher role now requires 'callback' parameter in instance construction,
+    	  'start' method does not takes the callback as 2nd parameter any more
 
 0.15      2013-08-31 23:01:57 Europe/Minsk
     Ping Watcher now supports ICMP ping (via Net::Ping::External) as well as TCP knock 
